force-app/main/default/objects/tc9_edc__Setup_Calculation_Method__mdt/tc9_edc__Setup_Calculation_Method__mdt.object-meta.xml
<CustomObject>
    <label>Setup Calculation Method</label>
    <pluralLabel>Setup Calculation Methods</pluralLabel>
</CustomObject>