force-app/main/default/objects/tc9_edc__Setup_Calculation_Method__mdt/fields/tc9_edc__Calculation_Based_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Calculation_Based_On__c</fullName>
    <label>Calculation Based On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>